--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@magic-sdk/admin": "^1.3.4",
+    "@tsndr/cloudflare-worker-jwt": "^1.1.6",
     "classnames": "^2.3.1",
     "cookie": "^0.4.2",
     "framer-motion": "^6.2.8",
